--- a/Assignment-1/index.html
+++ b/Assignment-1/index.html
@@ -13,11 +13,11 @@
         <table>
             <thead>
                 <tr>
-                    <th scope="col" id="noun"><button>1</button></th>
-                    <th scope="col" id="verb"><button>2</button></th>
-                    <th scope="col" id="adjective"><button>3</button></th>
-                    <th scope="col" id="secondNoun"><button>4</button></th>
-                    <th scope="col" id="place"><button>5</button></th>
+                    <th scope="col" ><button id="noun">1</button></th>
+                    <th scope="col" ><button id="verb">2</button></th>
+                    <th scope="col" ><button id="adjective">3</button></th>
+                    <th scope="col" ><button id="secondNoun">4</button></th>
+                    <th scope="col" ><button id="place">5</button></th>
                 </tr>
             </thead>
             <tbody>
