Added some premade smoothie options to the HTML incase the user does not make their own

--- a/Assignment-2/index.html
+++ b/Assignment-2/index.html
@@ -70,16 +70,18 @@
                         <option value="large">Large +$3.99</option>
                     </select>
                 </div>
-                <button type="submit" id="make-smoothie">Make Smoothie</button>
+                <button type="submit" id="make-smoothie">Make Smoothie!</button>
             </form>
             <!-- Total Price Display -->
             <p id="smoothie-price">Total Price: $<span id="total-price">0</span></p>
         </div>
         <!-- Smoothie Details Display -->
         <div id="smoothie-details-container">
-            <label for="smoothie-select">Select a Smoothie</label>
+            <label for="smoothie-select">Select a Smoothie to view it's details!</label>
             <select id="smoothie-select">
                 <option>Select a Smoothie</option>
+                <option value="Groovy Smoothie">Groovy Smoothie</option>
+                <option value="Berry Blast">Berry Blast</option>
             </select>
             <div id="smoothie-details">
                 <h2>Smoothie Details</h2>
