Replaced price display with creation message, added title case function, added css, and overall comments

--- a/Assignment-2/index.html
+++ b/Assignment-2/index.html
@@ -72,8 +72,8 @@
                 </div>
                 <button type="submit" id="make-smoothie">Make Smoothie!</button>
             </form>
-            <!-- Total Price Display -->
-            <p id="smoothie-price">Total Price: $<span id="total-price">0</span></p>
+            <!-- Smoothie Creation Message -->
+            <p id="smoothie-message"></p>
         </div>
         <!-- Smoothie Details Display -->
         <div id="smoothie-details-container">
