--- a/Assignment-3/index.html
+++ b/Assignment-3/index.html
@@ -8,6 +8,7 @@
         <title>Assignment 3 | Working with APIs</title>
     </head>
     <body>
+        <form>
         <label>Platform:</label>
         <input type="radio" name="platform" value="pc">
         <label>PC</label>
@@ -18,10 +19,11 @@
 
         <h1>Search for a game!</h1>
         <input type="text" id="searchInput" placeholder="Enter game title...">
-        <button id="searchButton">Search</button>
-        <button id="clearButton">Clear</button>
+        <button id="searchButton" type="submit">Search</button>
+        </form>
         <h2>Search Results</h2>
-        <table>
+        <div id="list">
+            <table>
             <thead>
                 <tr>
                     <th>Title</th>
@@ -34,5 +36,9 @@
                 <!-- Search results will be populated here -->
             </tbody>
         </table>
+        </div>
+        <div id="details">
+            <!-- Selected Game Details will be populated here -->
+        </div>
     </body>
 </html>
