--- a/Assignment-3/index.html
+++ b/Assignment-3/index.html
@@ -27,7 +27,7 @@
             </div>
         </form>
         <!-- Search Results Section displayed by a table -->
-        <h2>Search Results</h2>
+        <h2>Search Results, click on a game to view its details!</h2>
         <div id="list">
             <table>
             <thead>
